--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+            crossorigin="anonymous" referrerpolicy="no-referrer">
+    <title>Oh my Food</title>
 </head>
 <body>
-    ceci est ma page
+    <header>
+        <h1>omyfood</h1>
+        <div>
+            <div></div>
+            <div>Paris, Belleville</div>
+        </div>
+        <div>
+            <h2>Réservez le menu qui vous convient</h2> 
+            <p>Découvrez des restaurants d'exception,sélectionés par nos soins</p>
+        </div>
+    </header>
 </body>
 </html>
