--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,19 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
             integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
-    <title>Oh my Food</title>
+    <title>Oh my food</title>
 </head>
 <body>
-    <header>
-        <h1>omyfood</h1>
-        <div>
-            <div></div>
-            <div>Paris, Belleville</div>
-        </div>
-        <div>
-            <h2>Réservez le menu qui vous convient</h2> 
-            <p>Découvrez des restaurants d'exception,sélectionés par nos soins</p>
-        </div>
-    </header>
+    
 </body>
 </html>
