add omyfood and city

--- a/index.html
+++ b/index.html
@@ -14,35 +14,12 @@
 <body>
     <header>
         <h1>ohmyfood</h1>
-        <div>
-            <div></div>
-            <p>Paris, Belleville</p>
-        </div>
-        <div>
-            <h2>Réservez le menu qui vous convient</h2>
-            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-        </div>
-        <button>Explorer nos restaurants</button>
-        <div>
-            <h2>Fonctionnement</h2>
-            <div>
-                <div></div>
-                <div></div>
-                <p>Choisissez un restaurant</p>
-            </div>
-            <div>
-                <div></div>
-                <div></div>
-                <p>Composez votre menu</p>
-            </div>
-            </div>
-            <div>
-                <div></div>
-                <div></div>
-                <p>Degustez au restaurant</p>
-            </div>
-            </div>
-        </div>
     </header>
+    <main>
+        <div class="ville">
+            <div class="iconeville"><i class="fa-solid fa-location-dot"></i></div>
+            <h2>Paris, Belleville</h2>
+        </div>
+    </main>    
 </body>
 </html>
