add gradient and fontionnement

--- a/index.html
+++ b/index.html
@@ -20,6 +20,36 @@
             <div class="iconeville"><i class="fa-solid fa-location-dot"></i></div>
             <h2>Paris, Belleville</h2>
         </div>
+        <div class="explorer">
+            <h2>Réservez le menu qui<br/>vous convient</h2>
+            <p>Découvrez les restaurants d'exception,<br/>sélectionés par nos soins.</p>
+            <button>Explorez nos restaurants</button>
+        </div>
+        <section class="Fonctionnement">
+            <h2>Fonctionnement</h2>
+            <div class="choix">
+              <div class="info"><i class="fa-solid fa-mobile-screen"></i>Choisissez un restaurant</div>
+              <div class="info"><i class="fa-solid fa-list-ul"></i>Composez votre menu</div>
+              <div class="info"><i class="fa-solid fa-store"></i>Dégustez au restaurant</div>
+            </div>
+        </section>
+        <section class="menus">
+            <h2>Restaurants</h2>
+            <div class="bloc_menus1">
+               <div class="card_menu">
+                <img src="">
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
+                <div></div>
+            </div>
+               <div class="card_menu">
+                 <img src="">
+                 <h3>La note enchantée</h3>
+                 <p>charonne</p>
+                 <div></div>
+               </div>
+            </div>
+        </section>
     </main>    
 </body>
 </html>
