--- a/index.html
+++ b/index.html
@@ -16,40 +16,71 @@
         <h1>ohmyfood</h1>
     </header>
     <main>
-        <div class="ville">
-            <div class="iconeville"><i class="fa-solid fa-location-dot"></i></div>
-            <h2>Paris, Belleville</h2>
-        </div>
-        <div class="explorer">
-            <h2>Réservez le menu qui<br/>vous convient</h2>
-            <p>Découvrez les restaurants d'exception,<br/>sélectionés par nos soins.</p>
-            <button>Explorez nos restaurants</button>
-        </div>
-        <section class="Fonctionnement">
-            <h2>Fonctionnement</h2>
-            <div class="choix">
-              <div class="info"><i class="fa-solid fa-mobile-screen"></i>Choisissez un restaurant</div>
-              <div class="info"><i class="fa-solid fa-list-ul"></i>Composez votre menu</div>
-              <div class="info"><i class="fa-solid fa-store"></i>Dégustez au restaurant</div>
+        <section>
+            <div class="ville">
+                <div class="iconeville"><i class="fa-solid fa-location-dot"></i></div>
+                <h2>Paris, Belleville</h2>
+            </div>
+            <div class="explorer">
+                <h2>Réservez le menu qui<br/>vous convient</h2>
+                <p>Découvrez les restaurants d'exception,<br/>sélectionés par nos soins.</p>
+                <button>Explorez nos restaurants</button>
+            </div>
+            <div class="Fonctionnement">
+                <h2>Fonctionnement</h2>
+                <div class="choix ">
+                  <div class="info"><i class="fa-solid fa-mobile-screen"></i><p>Choisissez un restaurant</p></div>
+                  <div class="info"><i class="fa-solid fa-list-ul"></i><p>Composez votre menu</p></div>
+                  <div class="info"><i class="fa-solid fa-store"></i><p>Dégustez au restaurant</p></div>
+                </div>
             </div>
         </section>
         <section class="menus">
             <h2>Restaurants</h2>
             <div class="bloc_menus1">
-               <div class="card_menu">
-                <img src="">
-                <h3>La palette du goût</h3>
-                <p>Ménilmontant</p>
-                <div></div>
+                <div class="card_menu card_menumarge">
+                   <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash" class="img_menu">
+                    <div class="description">
+                      <h3>La palette du goût</h3>
+                      <p>Ménilmontant</p>
+                      <i class="fa-regular fa-heart"></i>
+                    </div>
+                </div>
+                <div class="card_menu card_menumarge">
+                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_menu">
+                     <div class="description">
+                       <h3>La note enchantée</h3>
+                       <p>Charonne</p>
+                       <i class="fa-regular fa-heart"></i>
+                     </div>
+                 </div>
             </div>
-               <div class="card_menu">
-                 <img src="">
-                 <h3>La note enchantée</h3>
-                 <p>charonne</p>
-                 <div></div>
-               </div>
+            <div class="bloc_menus2">
+                <div class="card_menu card_menumarge">
+                   <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_menu">
+                   <div class="description">
+                    <h3>A la française</h3>
+                    <p>Cité Rouge</p>
+                    <i class="fa-regular fa-heart"></i>
+                  </div>
+                </div>
+                <div class="card_menu card_menumarge">
+                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash" class="img_menu">
+                    <div class="description">
+                        <h3>Le délice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                        <i class="fa-regular fa-heart"></i>
+                  </div> 
+                </div>
             </div>
         </section>
-    </main>    
+    </main>
+    <footer class="footer">
+        <h2>ohmyfood</h2>
+        <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
+        <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
+        <p>Mentions légales</p>
+        <a href="mailto: helloomyfood@yahoo.fr">Contact</a>
+    </footer>    
 </body>
 </html>
