--- a/A la française.html
+++ b/A la française.html
@@ -18,89 +18,134 @@
     <main >
         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_restau">
         <div class="restau_menu">
-            <h2>A la française</h2>
-            <i class="fa-regular fa-heart"></i>
+            <div class="française">
+                <h2>A la française</h2>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+            </div>
             <div class="composition_restau">
+                <h3>Entrées</h3>
                 <div class="categorie_repas">
-                    <h3>Entrées</h3>
                     <div class="group_repas">
                         <div class="detail">
                             <h4>Tartare de poulpe acidulé</h4> 
                             <p>Aux zestes d'oranges</p> 
                         </div>
-                        <span class="prix_repas">25€</span>  
-                        <div class="detail_check"><i class="fa-solid fa-check"></i></div>
+                        <span class="prix_repas">25€</span> 
+                        <div class="detail_check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
                     </div>
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Velouté de legumes d'antan</h4>
-                            <p>Carottes,panais,topinambour</p>
-                        </div>
-                        <p class="prix_repas">35€</p>
-                    </div>
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Soupe à l'oignon</h4>
-                            <p>Revisitée</p>
-                        </div>
-                        <p class="prix_repas">20€</p>
-                    </div>
-                </div>    
+                </div>
                 <div class="categorie_repas">
-                    <h3>Plats</h3>
+                    <div class="group_repas">
+                        <div class="detail">
+                            <h4>Velouté de légumes d'antan</h4> 
+                            <p>Carotte, panais, topinambour </p> 
+                        </div>
+                        <span class="prix_repas">35€</span> 
+                        <div class="detail_check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
+                    </div>
+                </div>
+                <div class="categorie_repas">
+                    <div class="group_repas">
+                        <div class="detail">
+                            <h4>Soupe à l'oignon</h4> 
+                            <p>Revisitée</p> 
+                        </div>
+                        <span class="prix_repas">20€</span> 
+                        <div class="detail_check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
+                    </div>
+                </div>
+            </div>
+            <div class="composition_restau">
+                <h3>Plats</h3>
+                <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
                             <h4>Coquilles Saint-Jacques</h4> 
                             <p>Accompagnées d'une purée de panais</p> 
                         </div>
-                       <p class="prix_repas">40€</p>  
+                        <span class="prix_repas">40€</span> 
+                        <div class="detail_check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
                     </div>
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Magret de canard</h4>
-                            <p>Et parmentier de pommes de terre</p>
-                        </div>
-                       <p class="prix_repas">35€</p>
-                    </div>
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Pigeonneau d'Ille-et-Vilaine</h4>
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                        </div>
-                       <p class="prix_repas">44€</p>
-                    </div>
-                </div>  
+                </div>
                 <div class="categorie_repas">
-                   <h3>Desserts</h3>
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Pétale de violettes glacés</h4> 
-                            <p>Au purée de noisettes</p>
+                            <h4>Magret de canard</h4> 
+                            <p>Et parmentier de pommes de terre</p> 
                         </div>
-                       <p class="prix_repas">18€</p>   
+                        <span class="prix_repas">35€</span> 
+                        <div class="detail_check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
                     </div>
+                </div>
+                <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Fondant au chocolat</h4>
-                            <p>Revisité</p>
+                            <h4>Pigeonneau d'Ille-et-Vilaine</h4> 
+                            <p>Sur son lit de gnocchis aux légumes</p> 
                         </div>
-                       <p class="prix_repas">22€</p>
+                        <span class="prix_repas">44€</span> 
+                        <div class="detail_check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
                     </div>
+                </div>
+            </div> 
+            <div class="composition_restau">
+                <h3>Desserts</h3>
+                <div class="categorie_repas">
                     <div class="group_repas">
-                       <div class="detail">
-                            <h4>Millefeuille croustillant</h4>
-                            <p>Myrtilles et pâte d'amande</p>
-                       </div>
-                       <p class="prix_repas">23€</p>
+                        <div class="detail">
+                            <h4>Pétales de violettes glacés</h4> 
+                            <p>Et purée de noisettes</p> 
+                        </div>
+                        <span class="prix_repas">18€</span> 
+                        <div class="detail_check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
                     </div>
-                </div>  
-            </div>
-            <div class="commande">
-                <button>Commandez</button>
-            </div>
-        </div>   
+                </div>
+                <div class="categorie_repas">
+                    <div class="group_repas">
+                        <div class="detail">
+                            <h4>Fondant au chocolat</h4> 
+                            <p>Revisité</p> 
+                        </div>
+                        <span class="prix_repas">22€</span> 
+                        <div class="detail_check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
+                    </div>
+                </div>
+                <div class="categorie_repas">
+                    <div class="group_repas">
+                        <div class="detail">
+                            <h4>Millefeuille croustillant</h4> 
+                            <p>Myrtille et pâte d'amande</p> 
+                        </div>
+                        <span class="prix_repas">23€</span> 
+                        <div class="detail_check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
+                    </div>
+                </div>
+            </div> 
+        </div> 
+        <div class="commande">
+            <button>Commandez</button>
+        </div>  
     </main>
-    <footer class="footer_francaise">
+    <footer class="footer">
         <h2>ohmyfood</h2>
         <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
         <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
