--- a/Le delice des sens.html
+++ b/Le delice des sens.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
             integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
-    <title>A la française</title>
+    <title>Le delice des sens</title>
 </head>
 <body>
     <header>
         <h1>ohmyfood</h1>
     </header>
     <main >
-        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_restau">
+        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash" class="img_restau">
         <div class="restau_menu">
             <div class="française">
-                <h2>A la française</h2>
+                <h2>Le delice des sens</h2>
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-heart"></i>
             </div>
@@ -28,8 +28,8 @@
                 <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Tartare de poulpe acidulé</h4> 
-                            <p>Aux zestes d'oranges</p> 
+                            <h4>Tartare de thon</h4> 
+                            <p>Assaisonné au yuzu</p> 
                         </div>
                         <span class="prix_repas">25€</span> 
                         <div class="detail_check">
@@ -40,8 +40,8 @@
                 <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Velouté de légumes d'antan</h4> 
-                            <p>Carotte, panais, topinambour</p> 
+                            <h4>Bouchée de homard croustillant</h4> 
+                            <p>Et sa farandole de petits legumes</p> 
                         </div>
                         <span class="prix_repas">35€</span> 
                         <div class="detail_check">
@@ -52,8 +52,8 @@
                 <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Soupe à l'oignon</h4> 
-                            <p>Revisitée</p> 
+                            <h4>Velouté de cèpes</h4> 
+                            <p>Aux truffes</p> 
                         </div>
                         <span class="prix_repas">20€</span> 
                         <div class="detail_check">
@@ -67,8 +67,8 @@
                 <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Coquilles Saint-Jacques</h4> 
-                            <p>Accompagnées d'une purée de panais</p> 
+                            <h4>Poulets rôti aux herbes de provence</h4> 
+                            <p>Et sa crème de truffe</p> 
                         </div>
                         <span class="prix_repas">40€</span> 
                         <div class="detail_check">
@@ -79,8 +79,8 @@
                 <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Magret de canard</h4> 
-                            <p>Et parmentier de pommes de terre</p> 
+                            <h4>Langouste rôtie</h4> 
+                            <p>Et ses légumes de saison</p> 
                         </div>
                         <span class="prix_repas">35€</span> 
                         <div class="detail_check">
@@ -91,8 +91,8 @@
                 <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Pigeonneau d'Ille-et-Vilaine</h4> 
-                            <p>Sur son lit de gnocchis aux légumes</p> 
+                            <h4>Côte de boeuf  Angus</h4> 
+                            <p>Et sa purée d panais</p> 
                         </div>
                         <span class="prix_repas">44€</span> 
                         <div class="detail_check">
@@ -106,8 +106,8 @@
                 <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Pétales de violettes glacés</h4> 
-                            <p>Et purée de noisettes</p> 
+                            <h4>Farandole de desserts</h4> 
+                            <p>Du chef</p> 
                         </div>
                         <span class="prix_repas">18€</span> 
                         <div class="detail_check">
@@ -118,8 +118,8 @@
                 <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Fondant au chocolat</h4> 
-                            <p>Revisité</p> 
+                            <h4>Crème brûlée</h4> 
+                            <p>Revisitée</p> 
                         </div>
                         <span class="prix_repas">22€</span> 
                         <div class="detail_check">
@@ -130,8 +130,8 @@
                 <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
-                            <h4>Millefeuille croustillant</h4> 
-                            <p>Myrtille et pâte d'amande</p> 
+                            <h4>Tiramisu</h4> 
+                            <p>A la noisette</p> 
                         </div>
                         <span class="prix_repas">23€</span> 
                         <div class="detail_check">
