--- a/index.html
+++ b/index.html
@@ -28,30 +28,32 @@
             </div>
             <div class="Fonctionnement">
                 <h2>Fonctionnement</h2>
-                <div class="info">
-                    <span class="numero_info">1</span>
-                    <i class="fa-solid fa-mobile-screen"></i>
-                    <p>Choisissez un restaurant</p>
-                </div>
-                <div class="info">
-                    <span class="numero_info">2</span>
-                    <i class="fa-solid fa-list-ul"></i>
-                    <p>Composez votre menu</p>
-                </div>
-                <div class="info">
-                    <span class="numero_info">3</span>
-                    <i class="fa-solid fa-store"></i>
-                    <p>Dégustez au restaurant</p>
-               </div>          
+                <div class="choix">
+                    <div class="info">
+                        <span class="numero_info">1</span>
+                        <i class="fa-solid fa-mobile-screen"></i>
+                        <p>Choisissez un restaurant</p>
+                    </div>
+                    <div class="info">
+                        <span class="numero_info">2</span>
+                        <i class="fa-solid fa-list-ul"></i>
+                        <p>Composez votre menu</p>
+                    </div>
+                    <div class="info">
+                        <span class="numero_info">3</span>
+                        <i class="fa-solid fa-store"></i>
+                        <p>Dégustez au restaurant</p>
+                   </div> 
+                </div>         
             </div>
         </section>
         <section class="menus">
             <h2>Restaurants</h2>
             <div class="bloc_menus1">
                 <p><span class="nouveau">Nouveau</span></p>
-                <a href="#" class="card_menu card_menumarge">
+                <a href="#" class="card_menu">
                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash" class="img_menu">
-                    <div class="description margedescription">
+                    <div class="description ">
                       <h3>La palette du goût</h3>
                       <p>Ménilmontant</p>
                       <i class="fa-regular fa-heart"></i>
@@ -59,7 +61,7 @@
                     </div>
                 </a>
                 <p><span class="nouveau">Nouveau</span></p>
-                <a href="#" class="card_menu card_menumarge">
+                <a href="#" class="card_menu">
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_menu">
                      <div class="description">
                        <h3>La note enchantée</h3>
@@ -71,7 +73,7 @@
             </div>
             <div class="bloc_menus2">
                 <p><span class="nouveau">Nouveau</span></p>
-                <a href="#" class="card_menu card_menumarge">
+                <a href="#" class="card_menu">
                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_menu">
                    <div class="description">
                     <h3>A la française</h3>
@@ -81,7 +83,7 @@
                   </div>
                 </a>
                 <p><span class="nouveau">Nouveau</span></p>
-                <a href="#" class="card_menu card_menumarge">
+                <a href="#" class="card_menu">
                     <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash" class="img_menu">
                     <div class="description">
                         <h3>Le délice des sens</h3>
