add ecran 992px and correction de toutes les pages

--- a/A la française.html
+++ b/A la française.html
@@ -15,7 +15,7 @@
     <header>
         <h1>ohmyfood</h1>
     </header>
-    <main >
+    <main>
         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_restau">
         <div class="restau_menu">
             <div class="française">
@@ -25,6 +25,7 @@
             </div>
             <div class="composition_restau">
                 <h3>Entrées</h3>
+                <i class="fa-light fa-horizontal-rule"></i>
                 <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
@@ -36,8 +37,6 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
                             <h4>Velouté de légumes d'antan</h4> 
@@ -47,9 +46,7 @@
                         <div class="detail_check">
                             <i class="fa-solid fa-check"></i>
                         </div> 
-                    </div>
-                </div>
-                <div class="categorie_repas">
+                    </div>    
                     <div class="group_repas">
                         <div class="detail">
                             <h4>Soupe à l'oignon</h4> 
@@ -61,8 +58,6 @@
                         </div> 
                     </div>
                 </div>
-            </div>
-            <div class="composition_restau">
                 <h3>Plats</h3>
                 <div class="categorie_repas">
                     <div class="group_repas">
@@ -75,8 +70,6 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
                             <h4>Magret de canard</h4> 
@@ -87,8 +80,6 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
                             <h4>Pigeonneau d'Ille-et-Vilaine</h4> 
@@ -99,9 +90,6 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-            </div> 
-            <div class="composition_restau">
                 <h3>Desserts</h3>
                 <div class="categorie_repas">
                     <div class="group_repas">
@@ -114,8 +102,6 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
                             <h4>Fondant au chocolat</h4> 
@@ -126,8 +112,6 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
                     <div class="group_repas">
                         <div class="detail">
                             <h4>Millefeuille croustillant</h4> 
@@ -139,18 +123,18 @@
                         </div> 
                     </div>
                 </div>
-            </div>   
-        </div> 
+            </div>  
+        </div>
         <div class="commande">
             <button>Commandez</button>
-        </div>
+        </div>  
     </main>
-    <footer class="footer">
+    <footer class="footer_français">
         <h2>ohmyfood</h2>
         <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
         <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
         <p>Mentions légales</p>
         <a href="mailto:">Contact</a>
-    </footer>
+    </footer>   
 </body>
 </html>
