--- a/La note enchantée.html
+++ b/La note enchantée.html
@@ -16,148 +16,130 @@
         <h1>ohmyfood</h1>
     </header>
     <main >
-        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil-u2Lp8tXIcjw-unsplash" class="img_restau">
-        <div class="restau_menu">
-            <div class="française">
+        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil-u2Lp8tXIcjw-unsplash" class="img">
+        <div class="Note_menu">
+            <div class="enchante">
                 <h2>La note enchantée</h2>
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-heart"></i>
             </div>
-            <div class="composition_restau">
+            <div class="menu_restau">
                 <h3>Entrées</h3>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                <div class="categorie">
+                    <div class="groupe">
+                        <div class="detail_repas">
                             <h4>Ravioles de foie gras</h4> 
                             <p>Accompagnées de leur crème à la truffe</p> 
                         </div>
-                        <span class="prix_repas">25€</span> 
-                        <div class="detail_check">
+                        <span class="prix">25€</span> 
+                        <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="groupe">
+                        <div class="detail_repas">
                             <h4>Caviar osciètre</h4> 
                             <p>Sur blini à la farine de blé noir</p> 
                         </div>
-                        <span class="prix_repas">35€</span> 
-                        <div class="detail_check">
+                        <span class="prix">35€</span> 
+                        <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="groupe">
+                        <div class="detail_repas">
                             <h4>Homard et espuma de</h4> 
                             <p>Marinés aux zestes d'orange</p> 
                         </div>
-                        <span class="prix_repas">20€</span> 
-                        <div class="detail_check">
+                        <span class="prix">20€</span> 
+                        <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="groupe">
+                        <div class="detail_repas">
                             <h4>Foie gras de canard cuit entier</h4> 
                             <p>Confiture de figue et pain toasté</p> 
                         </div>
-                        <span class="prix_repas">35€</span> 
-                        <div class="detail_check">
+                        <span class="prix">35€</span> 
+                        <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
                 </div>
-            </div>
-            <div class="composition_restau">
                 <h3>Plats</h3>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                <div class="categorie">
+                    <div class="groupe">
+                        <div class="detail_repas">
                             <h4>Noix de coquilles Saint-Jacques</h4> 
                             <p>Sur lit de purée de céleri-rave</p> 
                         </div>
-                        <span class="prix_repas">40€</span> 
-                        <div class="detail_check">
+                        <span class="prix">40€</span> 
+                        <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="groupe">
+                        <div class="detail_repas">
                             <h4>Langoustine poêlée</h4> 
                             <p>Et purée de patate douce</p> 
                         </div>
-                        <span class="prix_repas">35€</span> 
-                        <div class="detail_check">
+                        <span class="prix">35€</span> 
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
+                    </div>
+                    <div class="groupe">
+                        <div class="detail_repas">
+                            <h4>Mijoté de queue de boeuf</h4> 
+                            <p>Et riz sauvage aux zestes de citron</p> 
+                        </div>
+                        <span class="prix">44€</span> 
+                        <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
                 </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Mijoté de queue de boeuf</h4> 
-                            <p>Et riz sauvage aux zestes de citron</p> 
+                <h3>Desserts</h3>
+                <div class="categorie">
+                    <div class="groupe">
+                        <div class="detail_repas">
+                            <h4>Macaron noisette et chocolat</h4> 
+                            <p>Glace au caramel brun et de Guérande</p> 
                         </div>
-                        <span class="prix_repas">44€</span> 
-                        <div class="detail_check">
+                        <span class="prix">18€</span> 
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
+                    </div>
+                    <div class="groupe">
+                        <div class="detail_repas">
+                            <h4>Baba au rhum revisité</h4> 
+                            <p>Revisité</p> 
+                        </div>
+                        <span class="prix">22€</span> 
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
+                    </div>
+                    <div class="groupe">
+                        <div class="detail_repas">
+                            <h4>Tarta au citron meringuée </h4> 
+                            <p>Déstructurée</p> 
+                        </div>
+                        <span class="prix">23€</span> 
+                        <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
                 </div>
             </div> 
-            <div class="composition_restau">
-                <h3>Desserts</h3>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Macaron noisette et chocolat</h4> 
-                            <p>Glace au caramel brun et de Guérande</p> 
-                        </div>
-                        <span class="prix_repas">18€</span> 
-                        <div class="detail_check">
-                            <i class="fa-solid fa-check"></i>
-                        </div> 
-                    </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Baba au rhum revisité</h4> 
-                            <p>Revisité</p> 
-                        </div>
-                        <span class="prix_repas">22€</span> 
-                        <div class="detail_check">
-                            <i class="fa-solid fa-check"></i>
-                        </div> 
-                    </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Tarta au citron meringuée </h4> 
-                            <p>Déstructurée</p> 
-                        </div>
-                        <span class="prix_repas">23€</span> 
-                        <div class="detail_check">
-                            <i class="fa-solid fa-check"></i>
-                        </div> 
-                    </div>
-                </div>
-            </div>   
+            <div class="commandez">
+                <button>Commandez</button>
+            </div>  
         </div> 
-        <div class="commande">
-            <button>Commandez</button>
-        </div>
     </main>
-    <footer class="footer">
+    <footer class="footer_enchante">
         <h2>ohmyfood</h2>
         <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
         <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
