--- a/La palette du goût.html
+++ b/La palette du goût.html
@@ -16,136 +16,120 @@
         <h1>ohmyfood</h1>
     </header>
     <main >
-        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash" class="img_restau">
-        <div class="restau_menu">
-            <div class="française">
+        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash" class="img_palette">
+        <div class="restaurants">
+            <div class="Palette">
                 <h2>La palette du goût</h2>
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-heart"></i>
             </div>
-            <div class="composition_restau">
+            <div class="different_menu">
                 <h3>Entrées</h3>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                <div class="resto_palette">
+                    <div class="composition">
+                        <div class="liste_repas">
                             <h4>Fricassée d'escargots</h4> 
                             <p>Au piment d'espelette</p> 
                         </div>
-                        <span class="prix_repas">25€</span> 
-                        <div class="detail_check">
+                        <span class="composition_prix">25€</span> 
+                        <div class="confirmation">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="composition">
+                        <div class="liste_repas">
                             <h4>Foie gras de canard mi-cuit</h4> 
                             <p>Et ses copeaux de truffe noire</p> 
                         </div>
-                        <span class="prix_repas">35€</span> 
-                        <div class="detail_check">
+                        <span class="composition_prix">35€</span> 
+                        <div class="confirmation">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="composition">
+                        <div class="liste_repas">
                             <h4>Oeuf au plat</h4> 
                             <p>Assaisonné à la truffe sur lit de </p> 
                         </div>
-                        <span class="prix_repas">20€</span> 
-                        <div class="detail_check">
+                        <span class="composition_prix">20€</span> 
+                        <div class="confirmation">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
                 </div>
-            </div>
-            <div class="composition_restau">
                 <h3>Plats</h3>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                <div class="resto_palette">
+                    <div class="composition">
+                        <div class="liste_repas">
                             <h4>Filet de boeuf aux herbes</h4> 
                             <p>Accompagnées de sa ribambelle de légumes</p> 
                         </div>
-                        <span class="prix_repas">40€</span> 
-                        <div class="detail_check">
+                        <span class="composition_prix">40€</span> 
+                        <div class="confirmation">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="composition">
+                        <div class="liste_repas">
                             <h4>Parmentier de queue de boeuf</h4> 
                             <p>A la truffe noire sur sa purée de panais</p> 
                         </div>
-                        <span class="prix_repas">35€</span> 
-                        <div class="detail_check">
+                        <span class="composition_prix">35€</span> 
+                        <div class="confirmation">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
+                    </div>
+                    <div class="composition">
+                        <div class="liste_repas">
+                            <h4>Filet de turbot</h4> 
+                            <p>Aux agrumes</p> 
+                        </div>
+                        <span class="composition_prix">44€</span> 
+                        <div class="confirmation">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
                 </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Filet de turbot</h4> 
-                            <p>Aux agrumes</p> 
+                <h3>Desserts</h3>
+                <div class="resto_palette">
+                    <div class="composition">
+                        <div class="liste_repas">
+                            <h4>Paris-Brest</h4> 
+                            <p>Revisité</p> 
                         </div>
-                        <span class="prix_repas">44€</span> 
-                        <div class="detail_check">
+                        <span class="composition_prix">18€</span> 
+                        <div class="confirmation">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
+                    </div>
+                    <div class="composition">
+                        <div class="liste_repas">
+                            <h4>Macaron au chocolat d'exception</h4> 
+                            <p>Et glace à la vanille de Madagascar</p> 
+                        </div>
+                        <span class="composition_prix">22€</span> 
+                        <div class="confirmation">
+                            <i class="fa-solid fa-check"></i>
+                        </div> 
+                    </div>
+                    <div class="composition">
+                        <div class="liste_repas">
+                            <h4>Mousse au chocolat</h4> 
+                            <p>Au piment d'Espelette et à la truffe noire</p> 
+                        </div>
+                        <span class="composition_prix">23€</span> 
+                        <div class="confirmation">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
                 </div>
             </div> 
-            <div class="composition_restau">
-                <h3>Desserts</h3>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Paris-Brest</h4> 
-                            <p>Revisité</p> 
-                        </div>
-                        <span class="prix_repas">18€</span> 
-                        <div class="detail_check">
-                            <i class="fa-solid fa-check"></i>
-                        </div> 
-                    </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Macaron au chocolat d'exception</h4> 
-                            <p>Et glace à la vanille de Madagascar</p> 
-                        </div>
-                        <span class="prix_repas">22€</span> 
-                        <div class="detail_check">
-                            <i class="fa-solid fa-check"></i>
-                        </div> 
-                    </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
-                            <h4>Mousse au chocolat</h4> 
-                            <p>Au piment d'Espelette et à la truffe noire</p> 
-                        </div>
-                        <span class="prix_repas">23€</span> 
-                        <div class="detail_check">
-                            <i class="fa-solid fa-check"></i>
-                        </div> 
-                    </div>
-                </div>
-            </div>   
         </div> 
-        <div class="commande">
+        <div class="choix_commande">
             <button>Commandez</button>
-        </div>
+        </div>  
     </main>
-    <footer class="footer">
+    <footer class="footer_palette">
         <h2>ohmyfood</h2>
         <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
         <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
