--- a/Le delice des sens.html
+++ b/Le delice des sens.html
@@ -16,136 +16,120 @@
         <h1>ohmyfood</h1>
     </header>
     <main >
-        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash" class="img_restau">
-        <div class="restau_menu">
-            <div class="française">
+        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash" class="img_delice">
+        <div class="restau_delice">
+            <div class="delice">
                 <h2>Le delice des sens</h2>
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-heart"></i>
             </div>
-            <div class="composition_restau">
+            <div class="composition_menu">
                 <h3>Entrées</h3>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                <div class="categorie_menu">
+                    <div class="liste_menu">
+                        <div class="repas_liste">
                             <h4>Tartare de thon</h4> 
                             <p>Assaisonné au yuzu</p> 
                         </div>
-                        <span class="prix_repas">25€</span> 
-                        <div class="detail_check">
+                        <span class="prix_menu">25€</span> 
+                        <div class="confirmation_menu">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="liste_menu">
+                        <div class="repas_liste">
                             <h4>Bouchée de homard croustillant</h4> 
                             <p>Et sa farandole de petits legumes</p> 
                         </div>
-                        <span class="prix_repas">35€</span> 
-                        <div class="detail_check">
+                        <span class="prix_menu">35€</span> 
+                        <div class="confirmation_menu">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="liste_menu">
+                        <div class="repas_liste">
                             <h4>Velouté de cèpes</h4> 
                             <p>Aux truffes</p> 
                         </div>
-                        <span class="prix_repas">20€</span> 
-                        <div class="detail_check">
+                        <span class="prix_menu">20€</span> 
+                        <div class="confirmation_menu">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
                 </div>
-            </div>
-            <div class="composition_restau">
                 <h3>Plats</h3>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                <div class="categorie_menu">
+                    <div class="liste_menu">
+                        <div class="repas_liste">
                             <h4>Poulets rôti aux herbes de provence</h4> 
                             <p>Et sa crème de truffe</p> 
                         </div>
-                        <span class="prix_repas">40€</span> 
-                        <div class="detail_check">
+                        <span class="prix_menu">40€</span> 
+                        <div class="confirmation_menu">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="liste_menu">
+                        <div class="repas_liste">
                             <h4>Langouste rôtie</h4> 
                             <p>Et ses légumes de saison</p> 
                         </div>
-                        <span class="prix_repas">35€</span> 
-                        <div class="detail_check">
+                        <span class="prix_menu">35€</span> 
+                        <div class="confirmation_menu">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="liste_menu">
+                        <div class="repas_liste">
                             <h4>Côte de boeuf  Angus</h4> 
                             <p>Et sa purée d panais</p> 
                         </div>
-                        <span class="prix_repas">44€</span> 
-                        <div class="detail_check">
+                        <span class="prix_menu">44€</span> 
+                        <div class="confirmation_menu">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
                 </div>
-            </div> 
-            <div class="composition_restau">
                 <h3>Desserts</h3>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                <div class="categorie_menu">
+                    <div class="liste_menu">
+                        <div class="repas_liste">
                             <h4>Farandole de desserts</h4> 
                             <p>Du chef</p> 
                         </div>
-                        <span class="prix_repas">18€</span> 
-                        <div class="detail_check">
+                        <span class="prix_menu">18€</span> 
+                        <div class="confirmation_menu">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="liste_menu">
+                        <div class="repas_liste">
                             <h4>Crème brûlée</h4> 
                             <p>Revisitée</p> 
                         </div>
-                        <span class="prix_repas">22€</span> 
-                        <div class="detail_check">
+                        <span class="prix_menu">22€</span> 
+                        <div class="confirmation_menu">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <div class="categorie_repas">
-                    <div class="group_repas">
-                        <div class="detail">
+                    <div class="liste_menu">
+                        <div class="repas_liste">
                             <h4>Tiramisu</h4> 
                             <p>A la noisette</p> 
                         </div>
-                        <span class="prix_repas">23€</span> 
-                        <div class="detail_check">
+                        <span class="prix_menu">23€</span> 
+                        <div class="confirmation_menu">
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
                 </div>
-            </div>   
+            </div>  
         </div> 
-        <div class="commande">
+        <div class="commande_delice">
             <button>Commandez</button>
-        </div>
+        </div> 
     </main>
-    <footer class="footer">
+    <footer class="footer_delice">
         <h2>ohmyfood</h2>
         <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
         <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
