--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer>
         <h2>ohmyfood</h2>
         <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
         <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
