--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <title>Oh my food</title>
 </head>
 <body>
+    <div class="loader">
+        <p>ohmyfood</p>
+    </div>
     <header>
         <h1>ohmyfood</h1>
     </header>
