--- a/La note enchantée.html
+++ b/La note enchantée.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <i class="fa-solid fa-arrow-left"></i>
         <h1>ohmyfood</h1>
     </header>
     <main >
